--- a/src/assets/i18n/it.po
+++ b/src/assets/i18n/it.po
@@ -1,16 +1,40 @@
 msgid ""
 msgstr ""
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Language-Team: \n"
-"X-Generator: Poedit 2.0.4\n"
 "Last-Translator: \n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language-Team: \n"
 "Language: it_IT\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 2.0.4\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-msgid "Find an details by PID or URL . . ."
-msgstr "Cerca un oggetto tramite PID o URL . . ."
+msgid "Amazon"
+msgstr "Amazon"
+
+msgid "Copyright"
+msgstr "Copyright"
+
+msgid "Details"
+msgstr "Dettagli"
+
+msgid "PID: "
+msgstr "PID: "
+
+msgid "Price Probe 2017"
+msgstr "Price Probe 2017"
+
+msgid "Search by pid or url . . ."
+msgstr "Cerca per pid o url . . ."
+
+msgid "Title: "
+msgstr "Titolo:"
+
+msgid "View on Amazon"
+msgstr "Vedi su Amazon"
+
+#~ msgid "Find an details by PID or URL . . ."
+#~ msgstr "Cerca un oggetto tramite PID o URL . . ."
